--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,11 @@
   <meta name="description"
     content="Hire smarter and faster with Gavel. Our AI interviews candidates instantly, helping recruiters shortlist top talent in minutes." />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gavel-frontend.vercel.app/" />
