--- a/chatbot/index.html
+++ b/chatbot/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="w-[calc(100vw-28px)] h-[600px] max-h-[80vh] sm:w-[380px] sm:h-[650px]"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
 
